[package]
name = "bili_ticket_gt_server"
version = "0.3.2"
edition = "2021"

# 注释掉原来的 Python 绑定配置
# [lib]
# name = "bili_ticket_gt_python"
# crate-type = ["cdylib"]

[dependencies]
# HTTP 服务相关依赖
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# 保留原有的业务逻辑依赖
reqwest = {version = "0.12", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
captcha_breaker = "0.0.0-dev.7"
rsa = "0.9"
rand = "0.8.5"
hex = "0.4"
soft-aes = "0.2"
md5 = "0.7"

# 移除 pyo3 依赖，因为我们不再需要 Python 绑定
# pyo3 = { version = "0.23.5", features = ["auto-initialize", "extension-module"]}

[patch.crates-io]
ort = { git="https://github.com/biliticket/ort" }
ort-sys = { git = "https://github.com/biliticket/ort" }