[package]
name = "bili_ticket_gt_server"
version = "0.3.2"
edition = "2021"

[dependencies]
# HTTP 服务相关依赖
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
# 修改：为 tower-http 添加 "trace" 特性以支持日志中间件
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 新增：日志记录相关依赖
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 保留原有的业务逻辑依赖
reqwest = {version = "0.12", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
captcha_breaker = "0.0.0-dev.7"
rsa = "0.9"
rand = "0.8.5"
hex = "0.4"
soft-aes = "0.2"
md5 = "0.7"
once_cell = "1.19"
lru = "0.12"

[patch.crates-io]
ort = { git="https://github.com/biliticket/ort" }
ort-sys = { git = "https://github.com/biliticket/ort" }
